# porsche-tg-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: main.py
app/bot/: keyboards.py  messages.py  router.py
app/bot/handlers/: favorites.py  lot.py  search.py  settings.py  start.py  watch.py
app/config/: customs.yaml  keywords.yaml  repair.yaml  settings.py
app/db/: models.py  repositories.py  session.py
app/db/migrations/: README  env.py
app/db/migrations/versions/: 0001_initial.py
app/parsers/: auto_ru.py  avito.py  base.py  copart.py  drom.py  iaai.py  mock.py
app/schemas/: costs.py  damage.py  listing.py  search.py  user.py
app/services/: currency.py  customs.py  damage_estimator.py  listing_normalizer.py  monitoring.py  notifier.py  repair_estimator.py  scoring.py  search_pipeline.py
app/tasks/: scheduler.py
app/utils/: money.py  text.py
tests/: conftest.py  test_cost_calculator.py  test_customs.py  test_damage_estimator.py  test_listing_normalizer.py  test_scoring.py
