[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porsche-tg-bot"
version = "0.1.0"
description = "MVP Telegram bot for damaged Porsche Panamera GTS 2019 and Porsche 911 search"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.6,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "playwright>=1.44,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6,<7",
    "redis>=5,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
